added effects : damage,  heal, Invinsible

--- a/Saved/Config/WindowsEditor/Input.ini
+++ b/Saved/Config/WindowsEditor/Input.ini
@@ -1,4 +1,5 @@
 [/Script/Engine.Console]
 HistoryBuffer=GASCompanion.Debug.AbilityQueue
 HistoryBuffer=AbilitySystem.DebugAttribute
+HistoryBuffer=ShowDebug AbilitySystem
 
