--- a/Saved/Config/ConsoleHistory.ini
+++ b/Saved/Config/ConsoleHistory.ini
@@ -1,4 +1,5 @@
 [ConsoleHistory]
 History=GASCompanion.Debug.AbilityQueue
-History=showdebug abilitysystem
+History=ShowDebug AbilitySystem
+History=" ShowDebug AbilitySystem"
 
